Add feature: the 'Discover Movies' button on the dashboard now goes to a discover index page

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,5 +1,5 @@
 <section class="discover-movies">
-  <%= button_to "Discover Movies" %>
+  <%= button_to "Discover Movies", discover_index_path, method: :get %>
 </section>
 
 <section class="friends">
