Add feature for top rated movies button
Added route to get movies
Added view for top rated movies page
Added controller for movies

Co-authored-by: AJ Tran <31839316+ajtran303@users.noreply.github.com>

--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Discover Movies</h1>
 <section class="top-rated-movies">
-  <%= button_to "Find Top Rated Movies" %>
+  <%= button_to "Find Top Rated Movies", "/movies", method: :get %>
 </section>
 <br/>
 <section class="find-movies">
