--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Discover Movies</h1>
 <section class="top-rated-movies">
-  <%= button_to "Find Top Rated Movies", "/movies", method: :get %>
+  <%= button_to "Find Top Rated Movies", "/movies", :params => {:q => "top rated"}, method: :get %>
 </section>
 <br/>
 <section class="find-movies">
