Add guard clause to results section on Movies Index Page

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -5,17 +5,19 @@
 <br/>
 <section class="find-movies">
   <%= form_tag do %>
-  <%= label_tag "movie-title-keywords", "Search by movie title" %>
-  <%= text_field_tag "movie-title-keywords" %>
+    <%= label_tag "movie-title-keywords", "Search by movie title" %>
+    <%= text_field_tag "movie-title-keywords" %>
   <%= submit_tag "Find Movies" %>
   <% end %>
 </section>
 
-<section class="results">
-  <% @movies.each do |movie| %>
+<% unless @movies.nil? %>
+  <section class="results">
+    <% @movies.each do |movie| %>
     <article class="movie-<%= movie[:id] %>">
       <%= link_to "#{movie[:title]}", movie_path(movie)%>
       <%= tag.span "Vote Average: #{movie[:vote_average].round(1)}" %>
     </article>
-  <% end %>
-</section>
+    <% end %>
+  </section>
+<% end %>
