--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -5,8 +5,8 @@
 <br/>
 <section class="find-movies">
   <%= form_tag movies_path, method: :get do %>
-    <%= label_tag "movie-title-keywords", "Search by movie title" %><br/>
-    <%= text_field_tag "movie-title-keywords" %><br/>
+    <%= label_tag :movie_title_keywords, "Search by movie title" %><br/>
+    <%= text_field_tag :movie_title_keywords %><br/>
     <%= submit_tag "Find Movies" %>
   <% end %>
 </section>
