--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -6,8 +6,8 @@
 
 <section class="find-movies">
   <%= form_tag movies_path, method: :get do %>
-    <%= label_tag "movie-title-keywords", "Search by movie title" %>
-    <%= text_field_tag "movie-title-keywords" %>
+    <%= label_tag :movie_title_keywords, "Search by movie title" %>
+    <%= text_field_tag :movie_title_keywords %>
     <%= submit_tag "Find Movies" %>
   <% end %>
 </section>
