Add feature: a user can add friends
  Friendships are mutual and "adding" doesn't need to be reciprocated

  TODO: Backfill the happy path test

Co-authored-by: Kathy Bui <61847658+Kathybui732@users.noreply.github.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   <body>
     <main>
       <%= tag.h1 "Welcome #{current_user.name}!" if current_user %>
+      <% flash.each do |type, message| %>
+        <%= tag.div message %>
+      <% end %>
       <%= yield %>
     </main>
     <footer>
