--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -4,6 +4,19 @@
 
 <section class="friends">
   <h1>Friends</h1>
+  <% current_user.friends.each do |friend| %>
+    <%= tag.p friend.name %>
+  <% end %>
+
+
+  <%= tag.p "You currently have no friends" if current_user.friends.empty? %>
+
+  <%= form_tag "/friendships", method: :post do %>
+    <%= label_tag :friends_email, "Search for Friends by Email" %><br/>
+    <%= text_field_tag :friends_email %>
+    <%= submit_tag "Add Friend" %>
+  <% end %>
+
 </section>
 
 <section class="viewing-party">
