--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,21 +1,20 @@
 <article class="movie-details">
   <header>
-    <%= @movie.name %>
+    <%= tag.h1 @movie.title %>
   </header>
 
   <main>
     <ul>
       <%= tag.li "Vote Average: #{@movie.vote_average}" %>
-      <%= tag.li "Runtime: #{@movie.runtime}" %>
-      <%= tag.li "Genre(s): #{@movie.genre}" %>
+      <%= tag.li "Runtime: #{@movie.runtime} min" %>
+      <%= tag.li "Genre(s): #{@movie.genres.join(', ')}" %>
     </ul>
     <h2>Summary</h2>
     <%= tag.p @movie.description %>
     <h2>Cast</h2>
     <ul>
       <% @movie.cast_members.each do |member| %>
-        <%= tag.li member.name %>
-        <%= tag.li member.character %>
+        <%= tag.li "#{member.actor} as #{member.character}" %>
       <% end %>
     </ul>
   </main>
@@ -28,4 +27,5 @@
       <%= tag.h4 "Author: #{review.author}" %>
       <%= tag.p review.content %>
     </article>
+    <% end %>
 </section>
