Add feature: There is a button to create a viewing party for a movie
  The button currently links to a blank "New Viewing Party" page
  TODO: Add a form to this page

Co-authored-by: Kathy Bui <61847658+Kathybui732@users.noreply.github.com>

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -9,6 +9,8 @@
       <%= tag.li "Runtime: #{@movie.runtime} min" %>
       <%= tag.li "Genre(s): #{@movie.genres.join(', ')}" %>
     </ul>
+    <%= button_to "Create A Viewing Party", new_viewing_party_path, method: :get %>
+
     <h2>Summary</h2>
     <%= tag.p @movie.description %>
     <h2>Cast</h2>
