--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -9,8 +9,7 @@
       <%= tag.li "Runtime: #{@movie.runtime} min" %>
       <%= tag.li "Genre(s): #{@movie.genres.join(', ')}" %>
     </ul>
-    <%= button_to "Create A Viewing Party", new_viewing_party_path, method: :get %>
-
+      <%= link_to "Create A Viewing Party", new_viewing_party_path({:movie_id => "#{@movie.tmdb_id}"}) %->
     <h2>Summary</h2>
     <%= tag.p @movie.description %>
     <h2>Cast</h2>
