--- a/app/views/viewing_party/new.html.erb
+++ b/app/views/viewing_party/new.html.erb
@@ -1,5 +1,15 @@
 <h1>Create a Viewing Party</h1>
-<%= form_for(@form_params[:viewing_party]) do |f| %>
 
+<%= form_tag viewing_party_index_path, method: :post do %>
+  <%= tag.h3 @movie.title %>
+  <%= hidden_field_tag :movie_title, @movie.title %>
+  <%= label_tag :duration_of_party %>
+  <%= text_field_tag :duration_of_party, @movie.runtime %>
+  <label for="date">Choose a date for your party:</label>
+  <input type="date" id="date" name="date">
 
+  <label for="time">Choose a time for your party:</label>
+  <input type="time" id="time" name="time">
+
+  <%= submit_tag "Create Party" %>
 <% end %>
