--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,1 @@
-<p>"Viewing party is an application in which users can explore movie options and create a viewing party event for the user and friend's."</p>
-
-<%= button_to "Log in with Google", "/auth/google_oauth2" %>
+<p>Viewing party is an application in which users can explore movie options and create a viewing party event for the user and friend's.</p>
