--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -22,4 +22,13 @@
 
 <section class="viewing-party">
   <h1>Viewing Parties</h1>
+  <div class="party-container">
+    <% @parties.each do |party| %>
+      <div class="party">
+        <%= tag.p "Movie: #{party.movie_title}" %>
+        <%= tag.p "Date: #{party.date}" %>
+        <%= tag.p "Time: #{party.time}" %>
+      </div>
+    <% end %>
+  </div>
 </section>
