--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -24,10 +24,11 @@
   <h1>Viewing Parties</h1>
   <div class="party-container">
     <% @parties.each do |party| %>
-      <div class="party">
+      <div class="party" id="party-<%= party.id %>">
         <%= tag.p "Movie: #{party.movie_title}" %>
         <%= tag.p "Date: #{party.date}" %>
         <%= tag.p "Time: #{party.time}" %>
+        <%= button_to "Add to Calendar" unless current_user.parties.include?(party) %>
       </div>
     <% end %>
   </div>
